			     BZFlag Release Notes
			     ====================

BZFlag 2.1.x
------------

* Updated zlib to version 1.2.3 - Sean Morrison
* Anti-aliased rendering option - Snick
* Added bzfscron plugin to execute commands on time intervals - Daniel Remenak
* Removed original BSD advertising clause from 3rd party code - Sean Morrison
* Polish language filter updates - harry666t
* increased joystick button support to 32 buttons - Markus
* Added a new optional height check - Thomas Stauer
* Added optional delay before the countdown gets resumed - Thomas Stauer
* Add -tkannounce server option - Bernt Hansen
* Fixed map line ending parse bug for flag zones - Jeff Myers
* Add client statistics output option - Daniel Remenak
* Add full support for Xfire on Windows - Daniel Remenak
* added a new /calc command, in-game calculator - Ian Agar
* added a new /gamestats command - Petteri Aimonen, Sean Morrison
* player accounting bug fix to bzfquery - Geoffrey Sneddon
* initial native HPUX platform support - Thomas Matelich
* Added optional direction shot line to radar - Stephan Hradek
* Added optional server-side fog enforcement - Michael Sheppard
* Modified bzfs error messages on startup - Sean Morrison
* Low gravity flag - Felix Monninger, Thomas Stauer
* Packetloss Kick - Thomas Stauer
* Fixed global banlist reload bug when using local bans - uso
* Callsign bans are now handled case-insensitively - Sean Morrison
* Added 'Dangerous' server-side spawn policy - Sean Morrison
* Fixed potential crash during server join - Alfredo Tupone, Sean Morrison
* Added new truely 'Random' server-side spawn policy - Sean Morrison
* Added server-side spawn policies, new -spawnPolicy bzfs option - Sean Morrison
* Allow the use of joystick pov hats/dpads - Stephan Hradek, Daniel Remenak
* Removed deprecated CLIENTQUERY command.  Use /clientquery - Daniel Remenak
* Fixed cross-platform and 64-bit network protocol bug - Andrew McNabb
* Added a NSIS script for Dev-C++ builds - UL_Approved